@@ -16,6 +16,8 @@ v1.0 - 2020-12-xx
 	- Plotting improvements:
 		- Show S/N ratio on trace plots
 		- Show spectral S/N ratio on spectrum plots
+	- Bug fixes:
+		- Plotting: avoid overlapping traces with different location code
 
 
 v0.9 - 2020-04-24
